# auth-service

./: README.md  pyproject.toml
auth_service/: .env.sample
auth_service/accounting/: authentication_backends.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
auth_service/accounting/migrations/: 0001_initial.py
auth_service/accounting/tests/: test_logout.py  test_otp_login.py  test_simple_login.py  test_user.py
auth_service/auth_service/: logger.json  logger.py  urls.py  utils.py
auth_service/auth_service/settings/: __init__.py  base.py  debug.py  prod.py  test_settings.py
